--- a/styles.css
+++ b/styles.css
@@ -16,9 +16,11 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .app span {
     color: #fff;
-    font-size: 40rem;
+    font-size: 20vw;
+    user-select: none;
 }
